--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 server.port=8081
+
+##logging
+#logging.level.root = info
+#logging.level.hello.springmvc = trace
+logging.level.hello.springmvc = debug
